Skip disabled CRTCs in drmmode_set_desired_modes() even if set_hw == FALSE

Not skipping a disabled CRTC results in a crash.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=90187

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>